가이드라인 UI변경 및 메인페이지 skill 부분 추가

--- a/guideLine/html/main/index.html
+++ b/guideLine/html/main/index.html
@@ -188,9 +188,17 @@
             </section>
             <section>
                 <h2>SKILL</h2>
-                <article>
-
-                </article>
+                <ul class="graph">
+                    <li data-score="100%">Web accessibility</li> 
+                    <li data-score="100%">HTML5+CSS3</li> 
+                    <li data-score="100%">SASS</li>   
+                    <li data-score="80%">jQuery</li>
+                    <li data-score="80%">Photoshop</li>
+                    <li data-score="50%">PHP</li>
+                    <li data-score="30%">Vue.js</li>
+                    <li data-score="30%">React</li>
+                    <li data-score="10%">Svelte</li>
+                    </ul>
             </section>
         </section>
     </main>
