--- a/guideLine/html/sub/svelte.html
+++ b/guideLine/html/sub/svelte.html
@@ -36,6 +36,7 @@
     <main id="container">
         <section id="svelte">
             <h2>Svelte</h2>
+            <p class="notice">Vue.js로 인한 현재 교육 보류</p>
             <h3>Svelte 특징</h3>
             <article class="explanation-box">
                 <ol>
