--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORTFOLIO - Svelte</title>
+    <title>PORTFOLIO - Vue.js</title>
 
     <!-- Cascading Style Sheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
@@ -33,9 +33,88 @@
 
     <!-- Main Content -->
     <main id="container">
-        <section id="notationHtml">
+        <section id="">
             <h2>Vue.js</h2>
+            <p class="notice">해당 내용은 인프런 (장기효)님의 동영상 강의를 정리 한것입니다.</p>
             <h3>Vue 이해하기</h3>
+            <h4>Vue.js 소개</h4>
+            <article class="explanation-box">
+                준비중
+            </article>
+        </section>
+        <section id="">
+            <h3>Vue CLI 이해하기</h3>
+            <table class="default-table">
+                <caption class="sr-only">Vue CLI 사용법</caption>
+                <colgroup>
+                    <col style="width: 25%" />
+                    <col style="width: 75%" />
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th scope="row">vue 파일 생성 </th>
+                        <td>
+                            <ul>
+                                <li>파일명은 두단어 이상 연결하여 사용</li>
+                                <li>파스칼표키법 사용 (PascalCase)</li>
+                                <li>MainHeader</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">기본태그 생성</th>
+                        <td>
+                            <ul>
+                                <li>"<span class="bold">vue</span>" 입력 후 탭키 클릭(4.x 버전)</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h3>node.js 명령어(터미널)</h3>
+            <table class="default-table">
+                <caption class="sr-only">node.js 명령어</caption>
+                <colgroup>
+                    <col style="width: 25%" />
+                    <col style="width: 75%" />
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th scope="row">ls </th>
+                        <td>파일목록 알아보기</td>
+                    </tr>
+                    <tr>
+                        <th>cd</th>
+                        <td>파일 선택</td>
+                    </tr>
+                    <tr>
+                        <th>프로젝트 생성</th>
+                        <td>
+                            <ul>
+                                <li>vue create [프로젝트 명]</li>
+                                <li>* powershell이 오류가 날 경우 "<span class="bold">bash</span>"를 이용하여 생성</li>
+                            </ul>
+                            <div>
+
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>server 실행</th>
+                        <td>"<span class="bold">npm run serve</span>" 명령어로 실행 (server가 아닌 serve가 맞음) </td>
+                    </tr>
+                    <tr>
+                        <th>axios 설치</th>
+                        <td>"<span class="bold">npm i axios</span>" 명령어를 실행 </td>
+                    </tr>
+                    <tr>
+                        <th>터미널 종료</th>
+                        <td> Ctrl + c</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
 </body>
