--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -35,17 +35,17 @@
     <main id="container">
         <section id="">
             <h2>SASS</h2>
-            <h3>이클립스 css 편집기와 연결</h3>
+            <h3>SASS 초기 셋팅</h3>
+            <h4>css 편집기와 연결 (Eclipse)</h4>
             <table class="default-table">
-                <caption class="sr-only">scss 파일 유형을 기본 Eclipse css 편집기와 연결
-                </caption>
+                <caption class="sr-only">scss 파일 유형을 기본 Eclipse css 편집기와 연결</caption>
                 <colgroup>
                     <col style="width: 25%" />
                     <col style="width: 75%" />
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th scope="row">Eclipse css 편집기와 연결</th>
+                        <th scope="row">Eclipse CSS 편집기와 연결</th>
                         <td>
                             <ol type="1">
                                 <li>"<span class="bold">window &gt; preferences</span>"로 이동</li>
@@ -55,6 +55,30 @@
                                 <li>*.scss 목록에서 File Associations 항목을 찿아서 선택</li>
                                 <li>*.scss를 선택한 후 하단창 Associated editors에서 "<span class="bold">Add</span>"버튼을 클릭</li>
                                 <li>상단에 internal editors 가 선택되어 있는지 확인한 다음 "<span class="bold">CSS Editor</span>"를 찿아서 선택한 다음 ok 버튼 클릭</li>
+                            </ol>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <h4>.scss 파일 형식을 기본 CSS 편집기에 추가 (Eclipse)</h4>
+            <table class="default-table">
+                <caption class="sr-only">.scss 파일 형식을 기본 css 편집기에 추가</caption>
+                <colgroup>
+                    <col style="width: 25%" />
+                    <col style="width: 75%" />
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th scope="row">.scss 파일 형식을 기본 css 편집기에 추가
+                        </th>
+                        <td>
+                            <ol type="1">
+                                <li>"<span class="bold">window &gt; preferences</span>"로 이동<</li>
+                                <li>"<span class="bold">General &gt; Content Types</span>" 메뉴 클릭</li>
+                                <li>Content types 에서 "<span class="bold">Text</span>" 를 펼친 후 css룰 선택</li>
+                                <li>css를 선택한 후 하단 "<span class="bold">File associations</span>"창에서 Add 버튼을 클릭</li>
+                                <li>Content type에 "<span class="bold">*.scss</span>"를 입력한 다음 ok를 클릭</li>
+                                <li>ok를 클릭하고 환경설정 창을 닫음</li>
                             </ol>
                         </td>
                     </tr>
