vue.html 일부분 수정

--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -36,10 +36,13 @@
         <section id="">
             <h2>Vue.js</h2>
             <p class="notice">해당 내용은 인프런 (장기효)님의 동영상 강의를 정리 한것입니다.</p>
-            <h3>Vue 이해하기</h3>
-            <h4>Vue.js 소개</h4>
+            <h3>초기설정</h3>
+            <h4>vue.js devtools 설치</h4>
             <article class="explanation-box">
-                준비중
+                <ul>
+                    <li>크롬 개발자도구에서 vue.js를 확인할 수 있는 tools</li>
+                    <li><a href="https://chrome.google.com/webstore/detail/vuejs-devtools/nhdogjmejiglipccpnnnanhbledajbpd">바로가기</a></li>
+                </ul>
             </article>
         </section>
         <section id="">
