--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -86,6 +86,69 @@
             </table>
         </section>
         <section id="">
+            <h3>SASS 구조</h3>
+            <h4>SASS 트리구조</h4>
+            <table class="default-table">
+                <caption class="sr-only">sass 기본구조 설명</caption>
+                <colgroup>
+                    <col style="width: 25%" />
+                    <col style="width: 75%" />
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th>sass 트리구조</th>
+                        <td>
+                            <fugure>
+                               <img src="../../assets/images/img-sass-01.png" alt="sass 설명">
+                               <figcaption>트리구조 접었을 때</figcaption> 
+                            </fugure>
+                            <fugure>
+                                <img src="../../assets/images/img-sass-02.png" alt="sass 설명">
+                                <figcaption>트리구조 펼쳐졌을때</figcaption> 
+                             </fugure>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>설명</th>
+                        <td>
+                            <ul>
+                                <li>sass 구조는 부모요소와 자식요소로 나뉜다. (가칭)</li>
+                                <li>자식요소는 역할별로 폴더로 구분지어 생성</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <h4>SASS 요소별 역할</h4>
+            <table class="default-table">
+                <caption class="sr-only">sass 기본구조 설명</caption>
+                <colgroup>
+                    <col style="width: 25%" />
+                    <col style="width: 75%" />
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th>부모요소/th>
+                        <td>
+                            <fugure>
+                               <img src="../../assets/images/img-sass-03.png" alt="sass 설명">
+                               <figcaption>부모요소</figcaption> 
+                            </fugure>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>설명</th>
+                        <td>
+                            <ul>
+                                <li>부모요소는 자식요소들을 임포트하여 컴파일 역활만 진행</li>
+                                <li>자식요소는 실제로 css 에 반영할 코드 작성</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section id="">
             <h3>For문</h3>
             <article class="explanation-box">
                 <ul>
