--- a/guideLine/html/sub/guideline.html
+++ b/guideLine/html/sub/guideline.html
@@ -155,6 +155,7 @@
                                     <li>클래스명 : "<span class="bold">admin-btn</span>"</li>
                                     <li>버튼 영역에 "<span class="bold">has-one</span>"을 추가하여 오른쪽 정렬</li>
                                     <li>페이징이 있는 테이블에 사용하며 버튼 1개일때는 흰색 테두리 버튼(클래스명 <span class="bold">white</span> 추가)  (120 * 50)</li>
+                                    <li>일부 페이지는 아직 "<span class="bold">tpms-btn</span>"으로 되어 있음 (상황에 맞지 않아 변경할 예정) 현재 고객 페이지 버튼 한개짜리에서 일부 발견</li>
                                 </ul>
                                 <div class="button-04"></div>
                                 <ul>
