--- a/guideLine/html/sub/htmcss.html
+++ b/guideLine/html/sub/htmcss.html
@@ -41,6 +41,10 @@
             <article class="explanation-box">
                 <a href="https://www.jsdelivr.com/package/npm/reset-css">사이트 바로가기</a>
             </article>
+            <h4>파비콘(favicon)</h4>
+            <article class="explanation-box">
+                <a href="https://www.favicon-generator.org/">생성 사이트 바로가기</a>
+            </article>
             <h4>div 한화면에 꽉차게 작업</h4>
             <table class="default-table">
                 <colgroup>
