--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -130,10 +130,10 @@
                     <tr>
                         <th>부모요소/th>
                         <td>
-                            <fugure>
+                            <figure>
                                <img src="../../assets/images/img-sass-03.png" alt="sass 설명">
                                <figcaption>부모요소</figcaption> 
-                            </fugure>
+                            </figure>
                         </td>
                     </tr>
                     <tr>
