--- a/guideLine/html/sub/htmcss.html
+++ b/guideLine/html/sub/htmcss.html
@@ -55,13 +55,13 @@
                     <tr>
                         <th scope="row">height: 100%;</th>
                         <td>
-                            <xmp>
+                            <pre>
 html, body {
     margin: 0;
     height: 100%;
     overflow: hidden;
 }
-                            </xmp>
+                            </pre>
                          </td>
                     </tr>
                 </tbody>
@@ -126,7 +126,7 @@ html, body {
                                 <li>기재는 하되 레이아웃 구성상 숨김처리 (클래스 "sr-only" 사용)</li>
                                 <li>"sr-only" 클래스가 지정 안되었을시 다음 코드 생성</li> 
                             </ul>
-                            <xmp>
+                            <pre>
     .sr-only{
             position: absolute;
             width: 1px;
@@ -137,7 +137,7 @@ html, body {
             clip: rect(0, 0, 0, 0);
             border: 0;
     }
-                            </xmp>
+                            </pre>
                         </td>
                     </tr>
                 </tbody>
