- [index.html] SKILL 부분 조정 - [guideline.html] 제목 가이드라인 이미지 추가 - [guideline.html] 블릿 가이드라인 이미지 추가

--- a/guideLine/html/sub/guideline.html
+++ b/guideLine/html/sub/guideline.html
@@ -125,14 +125,17 @@
             <p class="notice"> 제목은 H태그를 사용해야 하나 기존사이트 자체에서 구분짓지 않아 클래스로 구분</p>
             <h4>h1 태그</h4>
             <article class="explanation-box">
-                대부분 사이트와 동일하게 상단 로고에 지정 (h1은 페이지에 유일해야 함)
+                <div class="font-01"></div>
+                <p>대부분 사이트와 동일하게 상단 로고에 지정 (h1은 페이지에 유일해야 함)</p>
             </article>
             <h4>h2 태그</h4>
             <article class="explanation-box">
-                class="<span class="bold">title"</span>   
+                <div class="font-02"></div>
+                <p>class="<span class="bold">title"</span></p>   
             </article>
             <h4>h3 태그</h4>
             <article class="explanation-box">
+                <div class="font-03"></div>
                 <ul>
                     <li>고객페이지: class="<span class="bold">subheading"</span></li>
                     <li>관리자페이지: class="<span class="bold">content-title"</span></li>
@@ -143,6 +146,34 @@
         <section>
             <h3>블릿 가이드라인</h3>
             <p class="notice">H4태그 부터는 사용을 안하며 필요시 블릿으로 구분</p>
+            <h4>Bullet 1</h4>
+            <article class="explanation-box">
+                <div class="bullet-01"></div>
+                <ul>
+                    <li>class="<span class="bold">nobullet</span>" 의 before 속성</li>
+                    <li class="red">클래스를 지정하지 않으면 줄맞춤이 되지 않음</li>
+                </ul>
+            </article>
+            <h4>Bullet 2</h4>
+            <article class="explanation-box">
+                <div class="bullet-02"></div>
+                <p>class="<span class="bold">cont</span>" 의 before 속성</p>
+            </article>
+            <h4>Bullet 3</h4>
+            <article class="explanation-box">
+                <div class="bullet-03"></div>
+                <p>class="info-txt <span class="bold">explanation</span>" 의 before 속성</p>
+            </article>
+            <h4>Bullet 4</h4>
+            <article class="explanation-box">
+                <div class="bullet-04"></div>
+                <p>class="<span class="bold">circle-bullet</span>" 의 before 속성</p>
+            </article>
+            <h4>Bullet 5</h4>
+            <article class="explanation-box">
+                <div class="bullet-05"></div>
+                <p>class="<span class="bold">cont-bullet</span>" 의 before 속성</p>
+            </article>
         </section>
         <section>
             <h3>버튼 가이드라인</h3>
